--- a/features.html
+++ b/features.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BOSCO Features</title>
-    <link rel="shortcut icon" type="image/png" href="icons/bosco.png"/>
+    <link rel="shortcut icon" type="image/png" href="icons/bosco.png" />
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/features.css" />
     <link rel="stylesheet" href="css/footer.css" />
-    <link rel="stylesheet" href="css/burger.css">
+    <link rel="stylesheet" href="css/burger.css" />
 </head>
 
 <body>
@@ -35,10 +35,9 @@
         </div>
 
         <div class="container_heading">
-            <h1 class="heading_style">Why are we the most popular<br>restaurant in the city?</h1>
+            <h1 class="heading_style">Why are we the most popular restaurant in the city?</h1>
             <p class="description_style">The best European food from famous chefs is here. Combined with a unique
-                location and<br>
-                welcoming s ervice, this creates an unforgettable atmosphere. National flavor is present in<br>
+                location and welcoming s ervice, this creates an unforgettable atmosphere. National flavor is present in
                 everything: interior, staff, cuisine, music.</p>
         </div>
 
@@ -47,37 +46,37 @@
         </div>
 
         <div class="wrapper_features">
-            <div>
-                <img src="images/features1.png" alt="Gourmet food" class="img_transform">
+            <div class="img_indent">
+                <img src="images/features1.png" alt="Gourmet food" class="img_transform" />
                 <p class="caption">Gourmet food</p>
             </div>
-            <div>
-                <img src="images/features2.png" alt="Fast food service" class="img_transform">
+            <div class="img_indent">
+                <img src="images/features2.png" alt="Fast food service" class="img_transform" />
                 <p class="caption">Fast food service</p>
             </div>
-            <div>
-                <img src="images/features3.png" alt="Luxurious design" class="img_transform">
+            <div class="img_indent">
+                <img src="images/features3.png" alt="Luxurious design" class="img_transform" />
                 <p class="caption">Luxurious design</p>
             </div>
         </div>
 
         <div class="wrapper_features wrapper_indent">
             <div>
-                <img src="images/features4.png" alt="Friendly staff" class="img_transform">
+                <img src="images/features4.png" alt="Friendly staff" class="img_transform" />
                 <p class="caption caption_indent">Friendly staff</p>
             </div>
             <div>
-                <img src="images/features5.png" alt="Convenient location" class="img_transform">
-                <p class="caption caption_indent">Convenient location</p>
+                <img src="images/features6.png" alt="The best visitors" class="img_transform" />
+                <p class="caption caption_indent">The best visitors</p>
             </div>
             <div>
-                <img src="images/features6.png" alt="The best visitors" class="img_transform">
-                <p class="caption caption_indent">The best visitors</p>
+                <img src="images/features5.png" alt="Convenient location" class="img_transform" />
+                <p class="caption caption_indent">Convenient location</p>
             </div>
         </div>
 
         <div class="container_title">
-            <h1 class="heading_bottom">We will be happy to serve you any day of the week<br>
+            <h1 class="heading_bottom">We will be happy to serve you any day of the week
                 from 09:00 to 22:00
             </h1>
         </div>
