--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BOSCO</title>
-    <link rel="shortcut icon" type="image/png" href="icons/bosco.png"/>
+    <link rel="shortcut icon" type="image/png" href="icons/bosco.png" />
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/main_page.css" />
     <link rel="stylesheet" href="css/footer.css" />
-    <link rel="stylesheet" href="css/burger.css">
+    <link rel="stylesheet" href="css/burger.css" />
 </head>
 
 <body>
 
-    <header class="header_main">
+    <header class="header_main universal_background">
         <div class="container_nav">
             <div class="container_name">
                 <a href="index.html" class="name">BOSCO</a>
@@ -59,10 +59,10 @@
             </div>
         </section>
 
-        <section class="container_recipes_cook">
+        <section class="container_recipes_cook universal_background">
             <div class="wrapper_heading">
-                <h1>Tasteful</h1>
-                <p>recipes</p>
+                <h1 class="title_name">Tasteful</h1>
+                <p class="mini_title_name">recipes</p>
             </div>
         </section>
 
@@ -86,10 +86,10 @@
             </div>
         </section>
 
-        <section class="container_cook container_recipes_cook">
+        <section class="container_cook container_recipes_cook universal_background">
             <div class="wrapper_heading">
-                <h1>What to cook</h1>
-                <p>today?</p>
+                <h1 class="title_name">What to cook</h1>
+                <p class="mini_title_name">today?</p>
             </div>
         </section>
 
