--- a/reservation.html
+++ b/reservation.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BOSCO Reservation</title>
-    <link rel="shortcut icon" type="image/png" href="icons/bosco.png"/>
+    <link rel="shortcut icon" type="image/png" href="icons/bosco.png" />
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/main_page.css" />
     <link rel="stylesheet" href="css/reservation.css" />
     <link rel="stylesheet" href="css/footer.css" />
-    <link rel="stylesheet" href="css/burger.css">
+    <link rel="stylesheet" href="css/burger.css" />
 </head>
 
 <body>
@@ -24,7 +24,7 @@
             <div class="wrapper_nav">
                 <input id="nav_toggle" type="checkbox" />
                 <label class="nav_button" for="nav_toggle">
-                <span></span>
+                    <span></span>
                 </label>
                 <ul class="nav">
                     <li><a href="menu.html" class="nav_items">Menu</a></li>
@@ -53,11 +53,11 @@
             </div>
             <div class="gallery_text">
                 <p>
-                    BOSCO is one of the most popular establishments from well-known<br>
-                    metropolitan restaurateurs. From 2013 to 2015, BOSCO was recognized as the<br>
-                    "Best Restaurant" according to the "36 Favorite Places of the City" award, and in<br>
-                    2014 - according to the "Golden Chef" restaurant and gastronomic award. Visitors<br>
-                    choose BOSCO for the high level of service, delicious cuisine and European<br>
+                    BOSCO is one of the most popular establishments from well-known
+                    metropolitan restaurateurs. From 2013 to 2015, BOSCO was recognized as the
+                    "Best Restaurant" according to the "36 Favorite Places of the City" award, and in
+                    2014 - according to the "Golden Chef" restaurant and gastronomic award. Visitors
+                    choose BOSCO for the high level of service, delicious cuisine and European
                     atmosphere.
                 </p>
             </div>
@@ -72,7 +72,7 @@
                         <div class="date">
                             <label for="date">Date:</label>
                             <input type="datetime-local" id="date" name="date_time" />
-                            <label for="date">The nearest date booking - 25 August.</label>
+                            <label for="date">The nearest date booking - 14 October.</label>
                         </div>
                         <div class="number_person">
                             <label for="number">Number of persons:</label>
