--- a/contacts.html
+++ b/contacts.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/footer.css" />
-    <link rel="stylesheet" href="css/contacts.css">
-    <link rel="stylesheet" href="css/burger.css">
+    <link rel="stylesheet" href="css/contacts.css" />
+    <link rel="stylesheet" href="css/burger.css" />
 </head>
 
 <body>
@@ -37,20 +37,18 @@
             <h1 class="heading_contacts">Contact us for all questions of interest:</h1>
             <div class="wrapper_contacts">
                 <ul class="contacts_tel">
-                    <li><span class="number">+(375) 11 123 45 67</span><span class="contact">Anastasia (director)</span>
+                    <li><span class="number">+(375) 11 123 45 67</span><span class="contact">Anastasia (director)</span></li>
+                    <li><span class="number">+(375) 11 123 45 78</span><span class="contact">Eva (art-director)</span></li>
+                    <li><span class="number">+(375) 11 123 45 89</span><span class="contact">Jake (recruiting specialist)</span>
                     </li>
-                    <li><span class="number">+(375) 11 123 45 78</span><span class="contact">Eva (art-director</span)<
-                                /li>
-                    <li><span class="number">+(375) 11 123 45 89</span><span class="contact">Jake (recruiting specialist
-                            </span< /li>
                     <li><span class="number">+(375) 11 123 45 90</span><span class="contact">Michael (specialist in
-                            working with customers)</span< /li>
-                    <li><span class="number">+(375) 22 123 45 67</span><span class="contact">Our call-center</span< /li>
+                            working with customers)</span></li>
+                    <li><span class="number">+(375) 22 123 45 67</span><span class="contact">Our call-center</span></li>
                 </ul>
             </div>
         </div>
         </div>
-    </header>
+        </header>
 
     <footer class="footer">
         <div class="container_name">
